GRBK-5
Developed a series of new JUnit tests to provide better code coverage of the GradebookToolFacade mock implementation in hosted mode.